--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-        body, html {
+        html {
             height: 100%;
         }
-        
         
         .hero-image {   /** Linear-gradient adds a dark background effect */
             background-image: linear-gradient(rgba(0, 0, 0, 0.5),
              rgba(0, 0, 0, 0.5)),
-              url("/images/green.jpg");
+              url("/images/pex3.jpeg");
 
             /* Using % unit as more responsive over definite pixel unit */
-            height: 75%;
+            height: 100%;
 
             /** Responsive scaling */
             background-position: center;
@@ -20,7 +19,7 @@
         }
 
         .hero-text {
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             text-align: center;
             position: absolute;
             top: 10%;
@@ -28,30 +27,58 @@
             color: white;
             transform: translate(-50%, -50%);
         }
-        
-        
-        /* body {
+
+        body {
             background: rgb(58, 58, 58);
+            height: 100%;
             font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
             color: black;
             margin: 0;
             padding: 0;
-        } */
+        }
 
         .flex-box {
             padding: 20px;
             display: flex;
             flex-direction: row;
+            height: 25%;
         }
 
         .flex-box div {
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            color: white;
-            background: red;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            /*color: white; */
+            /*background: rgb(221, 166, 166); */
             margin: auto; 
-            padding: 5px;
-            width: 100px;
+            padding: 30px;
+            width: 50px;
             height: 50px;
+        }
+
+        .flex-box.triple div.item1 {
+            background: url("/images/005-surfer-surfing-in-a-big-water-wave.png");
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
+
+        .flex-box.triple div.item1 p.text1 {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            color: red;
+        }
+
+        .flex-box.triple div.item2 {
+            background: url("/images/003-graduation-hat-and-diploma.png");
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
+
+        .flex-box.triple div.item3 {
+            background: url("/images/007-computer.png");
+            background-repeat: no-repeat;
+            background-size: 100%;
         }
 
         .flex-box.triple  {
@@ -64,11 +91,24 @@
             color: black;
         }
 
+        /*
+        section.features figure {
+            margin: auto;
+            width: 100px;
+        }
+
+
+        .features figure img {
+            width: 200px;
+            border-radius: 10px;
+        }
+
         footer.main {
             background: black;
             padding: 10px 20px;
         }
 
+        */
 
         ul.nav {
             float: right;
@@ -83,13 +123,22 @@
         }
 
         a {
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             text-decoration: none;
             color: white;
         }
 
         a:hover {
-            background: black;
+                color: red;
+                transition: 1s ease;
         }
+
+        h1:hover {
+            color: red;
+            transition: 2s ease-in;
+            transition: 1s ease-out;
+        }
+
+      
 
        
