--- a/style.css
+++ b/style.css
@@ -1,11 +1,85 @@
         html {
             height: 100%;
+            scroll-behavior: smooth;
         }
+
+        body {
+            background: rgb(58, 58, 58);
+            height: 100%;
+            font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+        }
+
+        .row {
+            display: flex;
+            background: red;
+        }
+
+    
+          
+        .column {
+            flex: 33.33%;
+            padding: 75px;
+            color: white;
+            font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        .row img.img {
+            background: white;
+        }
+
+
+        /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-box {
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    border: 10px solid #f1f1f1;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side */
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
         
         .hero-image {   /** Linear-gradient adds a dark background effect */
             background-image: linear-gradient(rgba(0, 0, 0, 0.5),
              rgba(0, 0, 0, 0.5)),
               url("/images/pex3.jpeg");
+
 
             /* Using % unit as more responsive over definite pixel unit */
             height: 100%;
@@ -22,20 +96,13 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             text-align: center;
             position: absolute;
-            top: 10%;
+            top: 20%;
             left: 50%;
             color: white;
             transform: translate(-50%, -50%);
         }
 
-        body {
-            background: rgb(58, 58, 58);
-            height: 100%;
-            font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
-            color: black;
-            margin: 0;
-            padding: 0;
-        }
+        
 
         .flex-box {
             padding: 20px;
@@ -54,32 +121,6 @@
             height: 50px;
         }
 
-        .flex-box.triple div.item1 {
-            background: url("/images/005-surfer-surfing-in-a-big-water-wave.png");
-            background-repeat: no-repeat;
-            background-size: 100%;
-        }
-
-        .flex-box.triple div.item1 p.text1 {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            text-align: center;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            color: red;
-        }
-
-        .flex-box.triple div.item2 {
-            background: url("/images/003-graduation-hat-and-diploma.png");
-            background-repeat: no-repeat;
-            background-size: 100%;
-        }
-
-        .flex-box.triple div.item3 {
-            background: url("/images/007-computer.png");
-            background-repeat: no-repeat;
-            background-size: 100%;
-        }
 
         .flex-box.triple  {
             background: white;
@@ -119,6 +160,7 @@
             display: inline-block;
             padding: 20px;
             margin-right: 0px;
+            margin-left: 5px;
             padding-left: 0px;
         }
 
